[package]
name = "solana-sniper-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
# Solana crates (pin to your cluster version if needed)
solana-sdk = "1.18"
solana-client = "1.18"
solana-transaction-status = "1.18"
solana-account-decoder = "1.18"
# Data & logging
rusqlite = { version = "0.31", features = ["bundled"] }
chrono = { version = "0.4", features = ["clock"] }
rand = "0.8"
futures-util = "0.3.31"
shellexpand = "3.1.1"
